# starter

./: main.py  pyproject.toml  start.sh
api/graphql/: schema.py
api/graphql/user/: query.py  types.py
api/rest/v1/: __init__.py  user.py
apps/user/: entities.py  models.py  protocols.py  repository.py  service.py
bootstrap/: app.py
core/: utils.py
core/config/: __init__.py  conf.py
core/database/: base.py  db.py  deps.py  entity.py  model.py  protocols.py  repository.py
core/graphql/: __init__.py  acquire.py
core/uid_gen/: __init__.py  snow_flake.py  sony_flake.py
scripts/: format.sh  format_imports.sh  lint.sh  test-cov-html.sh  test.sh
